# vintage

./: .clang-format  .gitignore  CMakeLists.txt  README.md
examples/audio_effect/: distortion.cpp  osci.cpp  utility.cpp
examples/synth/: osci.cpp
include/vintage/: audio_effect.hpp  helpers.hpp  polyphonic_synth.hpp  vintage.hpp
